Removes some special characters. Starts to migrate some math olimpiads files

--- a/olimpiadas/linguistica/index.html
+++ b/olimpiadas/linguistica/index.html
@@ -20,4 +20,4 @@ tags: []
 comments: []
 ---
 <p>(Em breve)</p>
-<p>Um texto sobre as&nbsp;olimpíadas&nbsp;de linguística e por que participar delas.</p>
+<p>Um texto sobre as olimpíadas de linguística e por que participar delas.</p>
