--- a/olimpiadas/olimpiadas-de-matematica/index.html
+++ b/olimpiadas/olimpiadas-de-matematica/index.html
@@ -19,13 +19,13 @@ categories: []
 tags: []
 comments: []
 ---
-<p style="text-align: justify;">Nós já temos uma&nbsp;<a title="Por que participar?" href="http://www.olimpiadascientificas.com/olimpiadas/">lista de razões de por que participar de olimpíadas científicas</a>, mas agora temos também razões para participar de cada tipo específico de competição!</p></p>
+<p style="text-align: justify;">Nós já temos uma <a title="Por que participar?" href="http://www.olimpiadascientificas.com/olimpiadas/">lista de razões de por que participar de olimpíadas científicas</a>, mas agora temos também razões para participar de cada tipo específico de competição!</p></p>
 <p style="text-align: justify;">Bom, porque participar de olimpíadas de matemática?</p></p>
 <p style="text-align: justify;">Estão aí alguns motivos.</p></p>
 <ul style="text-align: justify;">
 <li><strong>Desafios de lógica.</strong> Gosta de desafios para quebrar a cabeça? Então, procure já participar de Olimpíadas de Matemática, pra descobrir um modo divertido de exercitar a mente :D.</li>
-<li><strong>Quer viajar e conhecer gente nova?&nbsp;</strong>Essas olimpíadas também te permitem isso! (Não que as outras não permitam, haha) &Eacute; sempre bom conhecer pessoas diferentes e socializar: imagina conhecendo pessoas de outros países!</li>
-<li><strong>Quer descobrir novas formas de resolver problemas?&nbsp;</strong>Existem 'n' formas de resolver problemas, e é sempre legal descobrir novas formas de resolução e estratégias.</li><br />
+<li><strong>Quer viajar e conhecer gente nova? </strong>Essas olimpíadas também te permitem isso! (Não que as outras não permitam, haha) &Eacute; sempre bom conhecer pessoas diferentes e socializar: imagina conhecendo pessoas de outros países!</li>
+<li><strong>Quer descobrir novas formas de resolver problemas? </strong>Existem 'n' formas de resolver problemas, e é sempre legal descobrir novas formas de resolução e estratégias.</li><br />
 </ul></p>
 <p style="text-align: justify;">Ainda não sabe se quer participar? Mesmo assim, arrisque! Provavelmente irá se apaixonar por essas olimpíadas, e participando você ganhará novas experiências e novas amizades! Boa sorte!</p></p>
 <p style="text-align: left;">José Robson Jr.</p></p>
