--- a/olimpiadas/olimpiadas-de-matematica/olimpiada-de-maio/index.html
+++ b/olimpiadas/olimpiadas-de-matematica/olimpiada-de-maio/index.html
@@ -32,7 +32,7 @@ Os níveis de participação da Olimpíada de Maio, são:</p>
 </ul></p>
 <div>
 <h3>Como estudar?</h3><br />
-Vejam as provas anteriores existentes no site oficial da <a title="Olimpíada Brasileira de Matemática" href="http://www.obm.org.br/opencms/como_se_preparar/provas/provas_maio.html" target="_blank">OBM</a>&nbsp;e acesse também o <a title="Estudo de Matemática" href="http://www.olimpiadascientificas.com/estudo/matematica/" target="_blank">link</a> de estudos da nossa página.</p>
+Vejam as provas anteriores existentes no site oficial da <a title="Olimpíada Brasileira de Matemática" href="http://www.obm.org.br/opencms/como_se_preparar/provas/provas_maio.html" target="_blank">OBM</a> e acesse também o <a title="Estudo de Matemática" href="http://www.olimpiadascientificas.com/estudo/matematica/" target="_blank">link</a> de estudos da nossa página.</p>
 <p>Fonte: <a title="Olimpíadas de Maio" href="http://www.obm.org.br/opencms/competicoes/internacionais/olimp_maio.html" target="_blank">OBM</a></p>
 <p></div><br />
 </div></p>
