--- a/olimpiadas/robotica/enater/index.html
+++ b/olimpiadas/robotica/enater/index.html
@@ -27,9 +27,9 @@ comments: []
 <ul>
 <li style="text-align: justify;"><strong>Nivel I:</strong> alunos que completem até 11 anos em dezembro do ano da competição;</li>
 <li style="text-align: justify;"><strong>Nível II:</strong> alunos de 12 a 14 anos em dezembro do ano da competição;</li>
-<li style="text-align: justify;"><strong>Nível III:</strong> alunos de 15 até 16 anos&nbsp;em dezembro do ano da competição;</li>
-<li style="text-align: justify;"><strong>Nível IV:</strong> alunos de 17 até 18 anos&nbsp;em dezembro do ano da competição.</li><br />
+<li style="text-align: justify;"><strong>Nível III:</strong> alunos de 15 até 16 anos em dezembro do ano da competição;</li>
+<li style="text-align: justify;"><strong>Nível IV:</strong> alunos de 17 até 18 anos em dezembro do ano da competição.</li><br />
 </ul></p>
 <h3 style="text-align: justify;"><strong>Formato: Fase &Uacute;nica</strong></h3></p>
 <p style="text-align: justify;">A prova é aplicada na própria escola, sob responsabilidade de um professor supervisor devidamente inscrito na organização. A prova é feita sem consulta e sem o uso de calculadoras, com duração máxima de 2 horas. A prova possui 20 questões de múltipla escolha, sendo 4 delas típicas de provas práticas do Torneio Juvenil de Robótica e de competições internacionais.</p></p>
-<p style="text-align: justify;">Fonte:&nbsp;<a title="Site oficial da competição" href="http://enater.org" target="_blank">site oficial da ENATER</a></p></p>
+<p style="text-align: justify;">Fonte: <a title="Site oficial da competição" href="http://enater.org" target="_blank">site oficial da ENATER</a></p></p>
