--- a/olimpiadas/olimpiadas-de-matematica/outros-paises-matematica/index.html
+++ b/olimpiadas/olimpiadas-de-matematica/outros-paises-matematica/index.html
@@ -23,22 +23,22 @@ comments: []
 <div><strong>Supranacionais:</strong> <a href="http://cms.math.ca/Competitions/APMO/">Asian Pacific Mathematics Olympiad (APMO)</a></div></p>
 <div></div></p>
 <div>
-<p>&nbsp;</p>
-<p><strong>Austrália:&nbsp;</strong></p>
+<p> </p>
+<p><strong>Austrália: </strong></p>
 <p style="padding-left: 30px"><a href="http://www.apsmo.info/">Australasian Problem Solving Mathematical Olympiads (APSMO)</a></p></p>
 <p style="padding-left: 30px"><a href="http://www.amt.edu.au/">Australian Mathematics Trust (AMT)</a></p><br />
-<strong>&Aacute;ustria:</strong>&nbsp;<a href="http://www.oemo.at/en/">&Ouml;sterreichische Mathematik Olympiade (&Ouml;MO) &nbsp;(*)</a></p>
-<p><strong>Bélgica:&nbsp;</strong></p>
-<p style="padding-left: 30px"><a href="http://omb.sbpm.be/">Olympiade Mathematique Belge</a>&nbsp;(p/ população francófona)</p></p>
-<p style="padding-left: 30px"><a href="https://www.vwo.be/">Vlaamse Wiskunde Olympiade</a>&nbsp;(p/ população nederlandesa)</p><br />
-<strong>Canadá:&nbsp;</strong></p>
+<strong>&Aacute;ustria:</strong> <a href="http://www.oemo.at/en/">&Ouml;sterreichische Mathematik Olympiade (&Ouml;MO)  (*)</a></p>
+<p><strong>Bélgica: </strong></p>
+<p style="padding-left: 30px"><a href="http://omb.sbpm.be/">Olympiade Mathematique Belge</a> (p/ população francófona)</p></p>
+<p style="padding-left: 30px"><a href="https://www.vwo.be/">Vlaamse Wiskunde Olympiade</a> (p/ população nederlandesa)</p><br />
+<strong>Canadá: </strong></p>
 <p style="padding-left: 30px"><a href="http://www.math.ca/Competitions/CMO/">Canadian Mathematical Olympiad (*)</a></p></p>
 <p style="padding-left: 30px"><a href="http://cms.math.ca/Competitions/COMC/">Canadian Open Math Challenge (*)</a></p><br />
-<strong>Estônia:</strong>&nbsp;<a href="http://www.math.olympiaadid.ut.ee/eng/html/index.php">Matemaatikaol&uuml;mpiaadid (*)</a></p>
-<p><strong>República Tcheca:</strong>&nbsp;&nbsp;<a href="http://www.math.muni.cz/~rvmo/">Česká Matematická Olympiáda</a></p>
+<strong>Estônia:</strong> <a href="http://www.math.olympiaadid.ut.ee/eng/html/index.php">Matemaatikaol&uuml;mpiaadid (*)</a></p>
+<p><strong>República Tcheca:</strong>  <a href="http://www.math.muni.cz/~rvmo/">Česká Matematická Olympiáda</a></p>
 <p><strong>Noruega:</strong> <a href="http://abelkonkurransen.no/nb/">Niels Henrik Abels Matematikkonkurranse (*)</a></p>
-<p><strong>Peru:</strong>&nbsp;<a href="http://onemperu.wordpress.com/">Olimpiada Nacional Escolar de Matemática (#)</a></p>
+<p><strong>Peru:</strong> <a href="http://onemperu.wordpress.com/">Olimpiada Nacional Escolar de Matemática (#)</a></p>
 <p><strong>Romênia:</strong> <a href="http://epsilon.ro/">Epsilon.ro</a></p>
-<p>&nbsp;</p>
+<p> </p>
 <p>Veja lista completa em: http://en.wikipedia.org/wiki/List_of_mathematics_competitions</p>
 <p></div></p>
