--- a/olimpiadas/olimpiadas-de-quimica/outros-paises-quimica/index.html
+++ b/olimpiadas/olimpiadas-de-quimica/outros-paises-quimica/index.html
@@ -20,14 +20,14 @@ comments: []
 ---
 <p>Olimpíadas Nacionais e Regionais de Química em outros países. Os nomes marcados em * são páginas que possuem versão em inglês; marcados com # possuem páginas em espanhol.</p>
 <div>
-<p>&nbsp;</p>
+<p> </p>
 <p><strong>Supranacionais:</strong> <a href="http://www.euso.dcu.ie/euso/home/index.htm">European Union Science Olympiad (*)</a></p>
-<p>&nbsp;</p>
+<p> </p>
 <p><strong>Alemanha:</strong> <a href="http://www.fcho.de/en/">F&ouml;rderverein Chemie-Olympiade (*)</a></p>
 <p><strong>Argentina: </strong><a href="http://www.oaq.uba.ar/">Olimpíada Argentina de Química</a></p>
-<p><strong>&Aacute;ustria:</strong>&nbsp;<a href="http://schulen.eduhi.at/chemie/school.htm">&Ouml;sterreichische Chemieolympiaden (*)</a></p>
+<p><strong>&Aacute;ustria:</strong> <a href="http://schulen.eduhi.at/chemie/school.htm">&Ouml;sterreichische Chemieolympiaden (*)</a></p>
 <p><strong>Canadá: </strong><a href="http://www.cco-occ.ca/en/general.html">Canadian Chemistry Olympiad (*)</a></p>
 <p><strong>Estônia:</strong> <a href="http://www.ttkool.ut.ee/chem/">Keemiaol&uuml;mpiaadid</a></p>
 <p><strong>Peru: </strong><a href="http://olimpiada.pucp.edu.pe/quimica/">Olimpiada Peruana de Química (#)</a></p>
-<p><strong>Portugal: &nbsp;</strong><a href="http://www.spq.pt/olimpiadas/">Olimpíadas Portuguesas de Química</a></p>
+<p><strong>Portugal:  </strong><a href="http://www.spq.pt/olimpiadas/">Olimpíadas Portuguesas de Química</a></p>
 <p></div></p>
