Arruma os comentarios

--- a/contato/duvidas-e-sugestoes/index.html
+++ b/contato/duvidas-e-sugestoes/index.html
@@ -17,6 +17,7 @@ date: '2012-10-02 18:17:03 -0400'
 date_gmt: '2012-10-02 21:17:03 -0400'
 categories: []
 tags: []
+comment: true
 comments:
 - id: 1850
   author: Caroline Werneck
