--- a/contato/index.html
+++ b/contato/index.html
@@ -16,7 +16,7 @@ date: '2011-10-08 20:02:06 -0400'
 date_gmt: '2011-10-08 20:02:06 -0400'
 categories: []
 tags: []
-comments: []
+comment: true
 ---
 <p style="text-align: justify;">Quer enviar uma crítica ou sugestão? Há alguma olimpíada sem divulgação ou sem notícia atualizada? Não deixe de nos contatar! Use o formulário abaixo ou envie um email diretamente para nós pela página &ldquo;<a href="/contato/todos-autores/" target="_blank">todos os autores</a>&rdquo;.</p></p>
 <p style="text-align: justify;">Nós do olimpiadascientificas somos um grupo que auxilia os estudantes a participarem de Olimpíadas Científicas. Não temos relação alguma com as mesmas. Logo, emails reclamando sobre medalhas, certificados, locais de prova ou as demais partes do processo de organização das competições, nos quais as pessoas tentem tomar satisfação conosco, não serão respondidos.</p><br />
