--- a/contato/livro-de-visitas/index.html
+++ b/contato/livro-de-visitas/index.html
@@ -16,6 +16,7 @@ date: '2011-10-08 20:12:15 -0400'
 date_gmt: '2011-10-08 23:12:15 -0400'
 categories: []
 tags: []
+comment: true
 comments:
 - id: 3
   author: Ivan
