--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ layout: default
     <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fnoic.com.br%2Frss&chan=y&num=15&au=y&date=y&utf=y&css=noic&html=y">View RSS feed</a>
     </noscript>
     
-<script language="JavaScript" src="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fwww.obm.org.br%2Ffeed%2F&chan=y&num=15&desc=1&au=y&date=y&utf=y&css=obm"  charset="UTF-8" type="text/javascript"></script>
+<script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fwww.rssmix.com%2Fu%2F8291654%2Frss.xml+&chan=titlelinkno&num=15&desc=300&au=y&date=y&utf=y&css=obm&html=p"  charset="UTF-8" type="text/javascript"></script>
 
 <noscript>
-<a href="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fwww.obm.org.br%2Ffeed%2F&chan=y&num=15&desc=1&au=y&date=y&utf=y&css=obm&html=y">View RSS feed</a>
+<a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fwww.rssmix.com%2Fu%2F8291654%2Frss.xml+&chan=titlelinkno&num=15&desc=300&au=y&date=y&utf=y&css=obm&html=y">View RSS feed</a>
 </noscript>
 
 
