--- a/contato/duvidas-e-sugestoes/index.html
+++ b/contato/duvidas-e-sugestoes/index.html
@@ -201,7 +201,4 @@ comments:
     o olimpiadascientificas.com diretamente mas não consegui. Deixo meu email
     para qualquer dúvida: leila@brilliant.org.  \n \nAbs, \n \nLeila "
 ---
-<p>Olá, você têm alguma dúvida ou sugestão? Deixe seu comentário abaixo que responderemos assim que possível.</p>
-<p>Ou então use nosso formulário de contato:</p>
-<p>[contact-form-7 id="4848" title="Formulário de contato"]</p>
-<p>Se acha que sua dúvida pode ser útil para outras pessoas, deixe o comentário abaixo, para que outros possam ler.</p>
+<p>Olá, você têm alguma dúvida ou sugestão? Deixe um comentário abaixo que responderemos assim que possível.</p>
