Comments na página inicial

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ layout: default
 
 
    <br></br>
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+<!---  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>-->
 
 <div class="text-center">
   {% include nav_paginator.html %}
 </div>
-
+ {% include comments.html %}
 </div>
