removes comments from front page. Why is disqus 2mb large! ???

--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@ layout: default
 <div class="text-center">
   {% include nav_paginator.html %}
 </div>
- {% include comments.html %}
+<!-- {% include comments.html %}-->
 </div>
